index.ejs and home.ejs modified, errors solved

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,52 +105,6 @@
     </section>
 
 
-    <!-- <section id="topsearched" class="featsec">
-
-        <div class="row m-auto">
-
-            <div class="featchange col-lg-4">
-                <center><a href="bmi"><i class="fa-solid fa-dumbbell fa-3x imgclass"></i>
-                        <h3>BMI Calci</h3>
-                    </a></center>
-            </div>
-
-            <div class="featchange col-lg-4">
-                <center><a href="diet"><i class="fa-solid fa-wheat-awn-circle-exclamation fa-3x imgclass"></i>
-                        <h3>Diet Plan</h3>
-                    </a></center>
-            </div>
-
-            <div class="featchange col-lg-4">
-                <center><a href="bfc"><i class="fa-solid fa-heart-pulse fa-3x imgclass"></i>
-                        <h3>Fat Calci</h3>
-                    </a></center>
-            </div>
-
-        </div>
-        <div class="row m-auto">
-
-            <div class="featchange col-lg-4">
-                <center><a href="bmr"><i class="fa-solid fa-heart-circle-plus fa-3x imgclass"></i>
-                        <h3>BMR Calculator</h3>
-                    </a></center>
-            </div>
-
-            <div class="featchange col-lg-4">
-                <center><a href="#"><i class="fa-solid fa-book fa-3x imgclass"></i>
-                        <h3>My Data </h3>
-                    </a></center>
-            </div>
-
-            <div class="featchange col-lg-4">
-                <center><a href="#"><i class="fa-solid fa-circle-check fa-3x imgclass"></i>
-                        <h3>Personal Assistance</h3>
-                    </a></center>
-            </div>
-
-        </div>
-
-    </section> -->
 <section id="topsearched" class="featsec">
 
         <div class="row m-auto">
@@ -206,9 +160,9 @@
         <div class="container-fluid">
 
             <h1 class="out">
-                Top Rated Specialists
+                Top Rated Users
             </h1>
-            <p class="out">95% patients find them helpfull</p>
+            <p class="out">95% Experts Find Us Helpfull</p>
             <div class="container-fluid">
                 <div class="scrolling-wrapper row flex-row flex-nowrap mt-4">
 
