js files modified and errors eliminated

--- a/views/bmr.ejs
+++ b/views/bmr.ejs
@@ -101,7 +101,7 @@
     <div id="b2">
       
     </div>
-    <a href="bmr.html"><button class="button-85" role="button">Refresh </button></a>
+    <a href="/bmr.html"><button class="button-85" role="button">Refresh </button></a>
   </div>
 </div>
   
@@ -111,5 +111,5 @@
 
   
   </body>
-  <script src="bmr.js"></script>
+  <script src="/bmr.js"></script>
 </html>
