--- a/views/bmi.ejs
+++ b/views/bmi.ejs
@@ -107,7 +107,7 @@
         <div id="b2">
 
         </div>
-        <a href="bmi.html"><button class="button-85" role="button">Refresh </button></a>
+        <a href="/bmi.html"><button class="button-85" role="button">Refresh </button></a>
       </div>
     </div>
 
@@ -117,6 +117,6 @@
 
 
 </body>
-<script src="bmi.js"></script>
+<script src="/bmi.js"></script>
 
 </html>
